# JournalingFileSystem

./: CMakeLists.txt  main.cpp  myApp.cpp  myApp.h  vcpkg_rf.txt
Dependencies/inotify-cpp/: libinotify-cpp.so.0.2.0
src/: JournalUtils.cpp  JournalUtils.h  main.cpp  myApp.cpp  myApp.h
